# onnxruntime-build

./: .gitignore  build-static-win64.bat  build-static_lib.sh  packages.config
.github/workflows/: build.yml  windows-x64.yaml
static_lib/: CMakeLists.txt
